<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/mnugrp1">
    <item
        android:id="@+id/itmTwo"
        android:title="@string/menu2"/>
    <item
        android:id="@+id/itmThree"
        android:title="@string/menu3" />
    <item
        android:id="@+id/itmFour"
        android:title="@string/menu4" />
    <item
        android:id="@+id/itmFive"
        android:title="@string/menu5" />
    <item
        android:id="@+id/itmAll"
        android:title="@string/menuAll" />
</group>

    <group android:id="@+id/mnugrp2">
        <item
            android:id="@+id/itmManage"
            android:title="@string/menuManage" />

</group>
</menu>